--- a/indax.html
+++ b/indax.html
@@ -1,37 +1,31 @@
 <html>
-    <head>
-        <title>Project-7</title> 
-    </head>
-        
-
+<head>
+    <title>Project-7</title>
+</head>
 <body>
-<h2>My favorite song:</h2>
-<ul type="square">
-<li>One of The Grils</li>
-<li>Blinding Lights</li>
-<li>After Hours</li>
-<li>Popular</li>
-</ul>
+    <h2>My Favorite Songs:</h2>
+    <ul>
+        <li>One of The Girls</li>
+        <li>Blinding Lights</li>
+        <li>After Hours</li>
+        <li>Popular</li>
+    </ul>
 
-<h2>My favorite car</h2>
-<h4>Mercedes vens:</h4>
-<ol type="A">
-<li>Mercedes S 350 d</li>
-<li>Mercedes Maybach</li>
-<li>Mercedes C 43</li>
-<li>Mercedes AMG</li>
-
-
-</ol>
-
-
-
-
+    <h2>My Favorite Cars</h2>
+    <h4>Mercedes-Benz:</h4>
+    <ol type="A">
+        <li>Mercedes S 350 d</li>
+        <li>Mercedes Maybach</li>
+        <li>Mercedes C 43</li>
+        <li>Mercedes AMG</li>
+    </ol>
 </body>
+</html>
+
 
 
 
 
     
-</html>
+
 
